# quant-trading-system

./: .gitignore  Makefile  docker-compose.yml  file-structure.txt  output.txt
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py
backend/app/application/scanner/: scanner_service.py
backend/app/core/: cache.py  config.py  settings.py  universe.py
backend/app/core/utils/: market_utils.py
backend/app/db/: session.py
backend/app/db/repositories/: market_repository.py
backend/app/domain/features/: indicator_pipeline.py
backend/app/domain/indicators/: atr.py  ema.py  indicator_pipeline.py  rsi.py  sma.py  volume.py
backend/app/domain/market/: fyers_auth.py  fyers_client.py  market_data_service.py
backend/app/domain/market_data/: fyers_auth.py
backend/app/domain/market_data/cache/: redis_cache.py
backend/app/domain/market_data/providers/: fyers_provider.py
backend/app/domain/market_data/services/: market_data_service.py
backend/app/domain/market_data/storage/: db_repository.py
backend/app/domain/market_data/utils/: chunker.py  parallel_executor.py
backend/app/domain/pipeline/: trading_pipeline.py
backend/app/domain/risk/: risk_manager.py  stop_loss.py  target.py
backend/app/domain/strategies/: indicators.py  mtf_engine.py  strategy_service.py
backend/app/domain/strategies/mtf/: strategy_orchestrator.py
backend/app/domain/strategies/pullback/: pullback_rule.py
backend/app/domain/strategies/trend/: trend_rule.py
backend/tests/scripts/: test_market_data.py  test_strategy.py
config/: infra_config.yaml  (+4 more)
(+13 files in other folders)
